// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueSymbol renders a symbol for the "critical" level 1`] = `
<span
  className="kuiEventSymbol"
>
  <span
    className="kuiIcon kuiIcon--error fa-warning"
  />
</span>
`;

exports[`IssueSymbol renders a symbol for the "info" level 1`] = `
<span
  className="kuiEventSymbol"
>
  <span
    className="kuiIcon kuiIcon--info fa-info"
  />
</span>
`;

exports[`IssueSymbol renders a symbol for the "none" level 1`] = `
<span
  className="kuiEventSymbol"
>
  <span
    className="kuiIcon kuiIcon--success fa-check"
  />
</span>
`;

exports[`IssueSymbol renders a symbol for the "warning" level 1`] = `
<span
  className="kuiEventSymbol"
>
  <span
    className="kuiIcon kuiIcon--warning fa-bolt"
  />
</span>
`;
